--- a/package.json
+++ b/package.json
@@ -3,14 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
+  "eslintConfig": {
+    "extends": "standard"
+  },
   "scripts": {
-    "test": "jest"
+    "test": "jest --clearCache && jest",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
+    "watch": "webpack --watch --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.24.0",
+    "babel-jest": "^29.7.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
-    "standard": "^17.1.0"
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "standard": "^17.1.0",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
