--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/preset-env": "^7.24.0",
+    "@types/jsdom": "^21.1.6",
     "babel-jest": "^29.7.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "standard": "^17.1.0",
